# smallpt-ispc

./: CMakeLists.txt  README.md  smallpt.cpp  smallpt.ispc  smallpt_c.cpp  smallpt_c.h  tasksys.cpp
